# ODOO-Blog

./: CORRECOES SISTEMA.txt  check_port.py  diag_run.py  install_dep.py  install_dep_output.txt  install_dep_selflog.py  package.json  python_start_log.txt  read_log.py  run_test.bat  start_server.bat  test_out.txt
odoo_blog_ai_system/: .env  .env.example  README.md  check_config.py  check_google_models.py  check_odoo_blogs.py  check_paramiko.py  config.py  fix_article_json.py  main.py  odoo_proxy.py  publish_article_api.py  pyproject.toml  reload_config_api.py  requirements.txt  restart_server.py  sample_template.html  sync_odoo.py  test_err.py  test_gemini.py  test_gen.py  test_images.py  test_import.py  test_req.json  test_start.py
odoo_blog_ai_system/data/examples/: template_MODELO_BASE.html
odoo_blog_ai_system/data/synced_from_odoo/: blogs.json  (+3 more)
odoo_blog_ai_system/models/: __init__.py  article.py  keyword.py  seo_report.py
odoo_blog_ai_system/modules/: __init__.py  ai_content_generator.py  backlink_system.py  bulk_generator.py  image_generator.py  keyword_cluster.py  odoo_publisher.py  scheduler.py  seo_optimizer.py  tag_generator.py  trend_scraper.py
odoo_blog_ai_system/providers/: __init__.py  gemini_provider.py  image_provider.py  llm_provider.py  ollama_provider.py  openai_provider.py
odoo_blog_ai_system/tests/: test_seo_optimizer.py  test_text_processing.py
odoo_blog_ai_system/utils/: __init__.py  cache.py  content_validator.py  html_builder.py  html_renderer.py  http_client.py  logger.py  text_processing.py
odoo_blog_ai_system/web/: server.py
(+233 files in other folders)
